syntax = "proto3";

package proto;

option go_package = "internal/grpc";

enum SecretType {
  UNKNOWN = 0;
  CREDS   = 1;
  TEXT    = 2;
  BINARY  = 3;
  CARD    = 4;
}

message Secret {
  string     name       = 1;
  SecretType type       = 2;
  int64      version    = 3;
  string     meta       = 4;  
  bytes      payloadRaw = 5;
}

message SecretListItem {
  string     name       = 1;
  SecretType type       = 2;
  int64      version    = 3;
}

message SecretList {
  repeated SecretListItem items = 1;
}